Updated README with new usage
Added explanation of how to run the fatjar